Fix metadata alignment to use flex with css

--- a/app/src/app/pages/artwork/artwork.component.scss
+++ b/app/src/app/pages/artwork/artwork.component.scss
@@ -1,3 +1,14 @@
+#metadata-left{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+#metadata-right{
+    display: flex;
+    flex-direction: column;
+}
+
 .badge {
     margin-right: 2px;
 }
